# HTRC-EF-Lib

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/htrc/torchlite/ef/: __init__.py  page.py  volume.py  workset.py
tests/: test_page.py  test_version.py  test_volume.py  test_workset.py
torchlitelib/: extracted_features.py
