[tool.poetry]
name = "torchlitelib"
version = "0.1.0"
description = "A Python package for working with HTRC Extracted Features data"
authors = ["cwulfman <cwulfman@princeton.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pyright = "^1.1.265"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
